crates/ika-protocol-config/src/snapshots/ika_protocol_config__test__version_7.snap
---
source: crates/ika-protocol-config/src/lib.rs
expression: "ProtocolConfig::get_for_version(cur, *chain_id)"
---
version: 7
feature_flags:
  consensus_round_prober: true
  mysticeti_num_leaders_per_round: 1
  consensus_zstd_compression: true
  consensus_batched_block_sync: true
  consensus_skip_gced_blocks_in_direct_finalization: true
  enforce_checkpoint_timestamp_monotonicity: true
  internal_presign_sessions: true
  bls_checkpoints: true
  fast_schnorr_supported: true
  off_chain_validator_metadata: true
  aggregated_network_key_public_outputs: true
  consensus_key_authority_names: true
  strict_network_key_coefficient_bound: true
  short_authority_names: true
max_messages_per_dwallet_checkpoint: 500
max_messages_per_system_checkpoint: 500
max_dwallet_checkpoint_size_bytes: 51200
max_system_checkpoint_size_bytes: 51200
buffer_stake_for_protocol_upgrade_bps: 5000
consensus_bad_nodes_stake_threshold: 30
idle_session_count_threshold: 10
consensus_max_transaction_size_bytes: 315218930
consensus_max_num_transactions_in_block: 512
consensus_max_transactions_in_block_bytes: 315218930
consensus_gc_depth: 60
decryption_key_reconfiguration_third_round_delay: 10
schnorr_presign_second_round_delay: 8
schnorr_presign_third_round_delay: 8
network_dkg_third_round_delay: 10
network_encryption_key_version: 3
reconfiguration_message_version: 3
end_of_publish_grace_rounds: 50
mpc_data_freeze_grace_rounds: 50
network_owned_address_ecdsa_secp256k1_presign_pool_minimum_size: 2500
network_owned_address_ecdsa_secp256r1_presign_pool_minimum_size: 1000
network_owned_address_eddsa_presign_pool_minimum_size: 5000
network_owned_address_schnorrkel_substrate_presign_pool_minimum_size: 1000
network_owned_address_taproot_presign_pool_minimum_size: 1000
network_owned_address_ecdsa_secp256k1_presign_consensus_round_delay: 4
network_owned_address_ecdsa_secp256r1_presign_consensus_round_delay: 4
network_owned_address_eddsa_presign_consensus_round_delay: 4
network_owned_address_schnorrkel_substrate_presign_consensus_round_delay: 8
network_owned_address_taproot_presign_consensus_round_delay: 8
network_owned_address_ecdsa_secp256k1_presign_sessions_to_instantiate: 2
network_owned_address_ecdsa_secp256r1_presign_sessions_to_instantiate: 1
network_owned_address_eddsa_presign_sessions_to_instantiate: 4
network_owned_address_schnorrkel_substrate_presign_sessions_to_instantiate: 1
network_owned_address_taproot_presign_sessions_to_instantiate: 1
network_owned_address_ecdsa_secp256k1_presign_pool_maximum_size: 75000
network_owned_address_ecdsa_secp256r1_presign_pool_maximum_size: 30000
network_owned_address_eddsa_presign_pool_maximum_size: 150000
network_owned_address_schnorrkel_substrate_presign_pool_maximum_size: 30000
network_owned_address_taproot_presign_pool_maximum_size: 30000
internal_secp256k1_ecdsa_presign_pool_minimum_size: 2500
internal_secp256r1_ecdsa_presign_pool_minimum_size: 1000
internal_eddsa_presign_pool_minimum_size: 1000
internal_schnorrkel_substrate_presign_pool_minimum_size: 1000
internal_taproot_presign_pool_minimum_size: 1000
internal_secp256k1_ecdsa_presign_consensus_round_delay: 4
internal_secp256r1_ecdsa_presign_consensus_round_delay: 4
internal_eddsa_presign_consensus_round_delay: 8
internal_schnorrkel_substrate_presign_consensus_round_delay: 8
internal_taproot_presign_consensus_round_delay: 8
internal_secp256k1_ecdsa_presign_sessions_to_instantiate: 2
internal_secp256r1_ecdsa_presign_sessions_to_instantiate: 1
internal_eddsa_presign_sessions_to_instantiate: 1
internal_schnorrkel_substrate_presign_sessions_to_instantiate: 1
internal_taproot_presign_sessions_to_instantiate: 1
internal_secp256k1_ecdsa_presign_pool_maximum_size: 75000
internal_secp256r1_ecdsa_presign_pool_maximum_size: 30000
internal_eddsa_presign_pool_maximum_size: 30000
internal_schnorrkel_substrate_presign_pool_maximum_size: 30000
internal_taproot_presign_pool_maximum_size: 30000
internal_presign_stale_batch_expiry_rounds: 3000
noa_presign_demand_park_rounds: 70000
